fix(ui5-li-tree): fixed incorrect tree items alignment (#3075)
When there was ellipsis of the text of the tree items, the ones
which got truncated were misaligned with the ones which weren't.
Now they are correctly aligned.

Fixes: #3069

--- a/packages/main/src/themes/TreeListItem.css
+++ b/packages/main/src/themes/TreeListItem.css
@@ -68,8 +68,8 @@
 }
 
 .ui5-li-tree-toggle-box {
-    width: var(--_ui5-tree-toggle-box-width);
-    height: var(--_ui5-tree-toggle-box-height);
+    min-width: var(--_ui5-tree-toggle-box-width);
+    min-height: var(--_ui5-tree-toggle-box-height);
     display: flex;
     align-items: center;
     justify-content: center;
